create html file and move it in wwwroot

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <title>Dutch Treat</title>
 </head>
 <body>
-
+    <h1>Dutch Treat</h1>
 </body>
 </html>
