--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,41 +2,42 @@
 <html>
 <head>
     <title>Dutch Treat</title>
+    <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
     <h2>Dutch Treat</h2>
-    <div>
+    <div class="product-info">
         <img src="img/Van_Gogh.jpg" />
         <h3>Mug</h3>
-        <ul>
+        <ul class="product-props">
             <li>Price: $9.99</li>
             <li>Artist: Van Gogh</li>
             <li>Title: </li>
             <li>Description: Self-portrait</li>
-        </ul>    
+        </ul>
         <button>Buy</button>
     </div>
-
-    <form>
-        <label>Your Name:</label>
-        <br />
-        <input type="text"/>
-        <br />
-        <label>Email:</label>
-        <br />
-        <input type="email" />
-        <br/>
-        <label>Subject:</label>
-        <br />
-        <input type="text" />
-        <br/>
-        <label>Message:</label>
-        <br/>
-        <textarea rows="4"></textarea>
-        <br/>
-        <input type="submit" value="Send Message" />
-    </form>
-
-
+    <br />
+    <div id="theForm">
+        <form>
+            <label>Your Name:</label>
+            <br />
+            <input type="text" />
+            <br />
+            <label>Email:</label>
+            <br />
+            <input type="email" />
+            <br />
+            <label>Subject:</label>
+            <br />
+            <input type="text" />
+            <br />
+            <label>Message:</label>
+            <br />
+            <textarea rows="4"></textarea>
+            <br />
+            <input type="submit" value="Send Message" />
+        </form>
+    </div>
 </body>
 </html>
