add id "buyButton" and add js script

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,7 +15,7 @@
             <li>Title: </li>
             <li>Description: Self-portrait</li>
         </ul>
-        <button>Buy</button>
+        <button id="buyButton">Buy</button>
     </div>
     <br />
     <div id="theForm">
@@ -39,5 +39,7 @@
             <input type="submit" value="Send Message" />
         </form>
     </div>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
