--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -40,6 +40,7 @@
         </form>
     </div>
 
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
